--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
     depends_on:
       - backend-core
     networks:
@@ -27,9 +24,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3001:3001"
-    volumes:
-      - ./backend-core:/app
-      - /app/node_modules
+    # volumes:
+    #   - ./backend-core:/app
+    #   - /app/node_modules
     environment:
       - DB_HOST=postgres
       - DB_PORT=5432
@@ -52,8 +49,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
-    volumes:
-      - ./backend-ai:/app
+    # volumes:
+    #   - ./backend-ai:/app
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
