--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - DB_NAME=zaplandia_db
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - JWT_SECRET=zaplandia_super_secret_key_2026
     depends_on:
       - postgres
       - redis
