--- a/backend-core/package.json
+++ b/backend-core/package.json
@@ -31,6 +31,8 @@
     "typeorm": "^0.3.20",
     "pg": "^8.11.3",
     "bcrypt": "^5.1.1",
+    "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
