chore: add CACHE_BUSTER arg to Dockerfile to force rebuild

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,6 +11,8 @@ RUN npm install --legacy-peer-deps
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
+# Force cache invalidation
+ARG CACHE_BUSTER=1
 COPY . .
 
 # Next.js collects completely anonymous telemetry data about general usage.
