--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.471.0",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "@hello-pangea/dnd": "^16.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
