--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "lucide-react": "^0.471.0",
     "clsx": "^2.1.1",
     "tailwind-merge": "^3.0.1",
-    "@hello-pangea/dnd": "^16.5.0"
+    "@hello-pangea/dnd": "^16.5.0",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
