--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - JWT_SECRET=zaplandia_super_secret_key_2026
+      - AI_SERVICE_URL=http://backend-ai:8000
     depends_on:
       - postgres
       - redis
