--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - REDIS_PORT=6379
       - JWT_SECRET=zaplandia_super_secret_key_2026
       - AI_SERVICE_URL=http://backend-ai:8000
+      - INTERNAL_WEBHOOK_URL=https://www.zaplandia.com.br/api/webhooks/evolution
     depends_on:
       - postgres
       - redis
