--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "clsx": "^2.1.1",
     "tailwind-merge": "^3.0.1",
     "@hello-pangea/dnd": "^16.5.0",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "emoji-picker-react": "^4.11.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
