--- a/backend-core/package.json
+++ b/backend-core/package.json
@@ -37,7 +37,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "@nestjs/bull": "^11.0.1",
-    "bull": "^4.10.0"
+    "bull": "^4.10.0",
+    "@google/generative-ai": "^0.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
