--- a/backend-core/package.json
+++ b/backend-core/package.json
@@ -31,7 +31,7 @@
     "passport-jwt": "^4.0.1",
     "typeorm": "^0.3.20",
     "pg": "^8.11.3",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "axios": "^1.6.0",
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.2.2",
@@ -48,6 +48,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "@types/bull": "^4.10.0",
